--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <style rel="stylesheet" href="index.css"></style>
   <script src="index.js" defer></script>
+  <!-- https://coolors.co/fa8334-ba1b1d-a0af84-040404-d7d9ce -->
+   <!--  -->
 </head>
 <body>
-  
+  <!-- Section for the header of the webpage -->
+  <header id="webpage-header">
+    <!-- Credits for icon: https://www.iconpacks.net/?utm_source=link-attribution&utm_content=9998 -->
+     <img src="blockchain-icon.png" alt="Image of a blockchain logo" class="logo">
+     <h1>UCalgary Blockchain Society - Task Tracker</h1>
+  </header>
 </body>
 </html>
