--- a/index.html
+++ b/index.html
@@ -5,25 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UCalgary Blockchain Society - Task Tracker</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <style rel="stylesheet" href="index.css"></style>
+  <link rel="stylesheet" href="styles.css">
   <script src="index.js" defer></script>
 </head>
-<body>
+<body class="default-mode">
+  <div class="container-fluid">
+    <header>
+      <div id="webpage-header">
+        <!-- Credits for icon: https://www.iconpacks.net/?utm_source=link-attribution&utm_content=9998 -->
+       <img src="img/blockchain-icon.png" alt="Image of a blockchain logo" class="logo">
+       <div class="default-heading">
+        <h1 class="container-fluid">UCalgary Blockchain Society - Task Tracker</h1>
+       </div>
+       <div class="alternate-heading">
+        <h1 class="container-fluid">Task Tracker</h1>
+       </div>
+      </div>
+    </header>
+    <main id="webpage-main">
+      <section id="tasks-empty">
+        <!-- Credits for icon: https://www.iconpacks.net/?utm_source=link-attribution&utm_content=9998 -->
+       <img src="img/timeline-goals-and-tasks.png" alt="Image of task timeline" class="center">
+       <p><em>Tasks assigned to team members show up here</em></p>
+      </section>
+      <section id="tasks"></section>
+      <div class="button_plus"></div>
+    </main>
+  </div>
   <!-- Section for the header of the webpage -->
-  <header id="webpage-header">
-    <!-- Credits for icon: https://www.iconpacks.net/?utm_source=link-attribution&utm_content=9998 -->
-     <img src="img/blockchain-icon.png" alt="Image of a blockchain logo" class="logo">
-     <h1>UCalgary Blockchain Society - Task Tracker</h1>
-  </header>
-  <main id="webpage-main">
-    <section id="tasks-empty">
-      <!-- Credits for icon: https://www.iconpacks.net/?utm_source=link-attribution&utm_content=9998 -->
-     <img src="img/timeline-goals-and-tasks.png" alt="Image of task timeline">
-     <h1>Tasks assigned to team members show up here</h1>
-    </section>
-    <section id="tasks"></section>
-    <button class="plus-btn" id="add-btn"><i class="bi bi-plus-circle"></i></button>
-  </main>
 </body>
 </html>
