--- a/index.html
+++ b/index.html
@@ -31,6 +31,58 @@
        <p><em>Tasks assigned to team members show up here</em></p>
       </section>
       <section id="tasks"></section>
+      <!-- Pop-up from (start) -->
+      <section id="popup-form">
+        <form class="input-form">
+          <div class="form-heading">
+            <h1 style="text-align:center; color:#D7D9CE;">New Task</h1>
+            <button type="button" class="btn-close btn-close-white" aria-label="Close"></button>
+          </div>
+          <div class="form-group row">
+            <label for="supervisor" class="col-sm-2 col-form-label">Supervisor</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="supervisor" placeholder="Assigned by...">
+            </div>
+          </div>
+          <br>
+          <div class="form-group row">
+            <label for="club-member" class="col-sm-2 col-form-label">Member</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="club-member" placeholder="Assigned to...">
+            </div>
+          </div>
+          <br>
+          <div class="radio-buttons">
+            <label for="priority">Priority</label>
+            <section id="priority-choices">
+              <div class="priority">
+                <input type="radio" name="priority" id="low-priority" value="Low Priority">
+                <label for="low-priority">Low</label>
+              </div>
+              <div class="priority">
+                <input type="radio" name="priority" id="medium-priority" value="Medium Priority">
+                <label for="medium-priority">Medium</label>
+              </div>
+              <div class="priority">
+                <input type="radio" name="priority" id="high-priority" value="High Priority">
+                <label for="high-priority">High</label>
+              </div>
+            </section>
+            <br>
+          </div>
+          <div class="form-group">
+            <label for="task-deadline" class="col-sm-2 col-form-label">Deadline</label>
+            <input type="date" id="task-deadline">
+          </div>
+          <br>
+          <div class="form-group">
+            <textarea class="form-control" id="task-description" rows="3" placeholder="Enter task description..."></textarea>
+          </div>
+          <br>
+          <button class="button-30" id="add-task" role="button">Add</button>
+        </form>
+      </section>
+      <!-- Pop-up form (end) -->
       <div class="button_plus"></div>
     </main>
   </div>
