--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           <button class="button-30" id="add-task" role="button">Add</button>
         </form>
       </section>
+      <div class="overlay"></div>
       <!-- Pop-up form (end) -->
       <div class="button_plus"></div>
     </main>
