Define functionality to display popup form

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </section>
       <div class="overlay"></div>
       <!-- Pop-up form (end) -->
-      <div class="button_plus"></div>
+      <div role="button" class="button_plus"></div>
     </main>
   </div>
   <!-- Section for the header of the webpage -->
