Define functionality to add tasks to webpage

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Credits for icon: https://www.iconpacks.net/?utm_source=link-attribution&utm_content=9998 -->
        <img src="img/timeline-goals-and-tasks.png" alt="Image of task timeline" class="center">
        <p><em>Tasks assigned to team members show up here</em></p>
-      </section>
+      </section> 
       <section id="tasks"></section>
       <!-- Pop-up from (start) -->
       <section id="popup-form">
@@ -56,15 +56,15 @@
             <label for="priority">Priority</label>
             <section id="priority-choices">
               <div class="priority">
-                <input type="radio" name="priority" id="low-priority" value="Low Priority">
+                <input type="radio" name="priority" id="low-priority" value="Low">
                 <label for="low-priority">Low</label>
               </div>
               <div class="priority">
-                <input type="radio" name="priority" id="medium-priority" value="Medium Priority">
+                <input type="radio" name="priority" id="medium-priority" value="Medium">
                 <label for="medium-priority">Medium</label>
               </div>
               <div class="priority">
-                <input type="radio" name="priority" id="high-priority" value="High Priority">
+              <input type="radio" name="priority" id="high-priority" value="High">
                 <label for="high-priority">High</label>
               </div>
             </section>
@@ -79,7 +79,7 @@
             <textarea class="form-control" id="task-description" rows="3" placeholder="Enter task description..."></textarea>
           </div>
           <br>
-          <button class="button-30" id="add-task" role="button">Add</button>
+          <button type="submit" class="button-30" id="add-task" role="button">Add</button>
         </form>
       </section>
       <div class="overlay"></div>
@@ -87,6 +87,5 @@
       <div role="button" class="button_plus"></div>
     </main>
   </div>
-  <!-- Section for the header of the webpage -->
 </body>
 </html>
